+galerei, +hom, aktualizacii

--- a/Buguruslan.mw
+++ b/Buguruslan.mw
@@ -5,32 +5,45 @@
  | Lidnanznam text = Buguruslanan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 49,585
- | Voz' = 2017
+ | Eläjiden lugu = 47,714
+ | Voz' = 2021
  | Pind = 76.46
- | Fail = Buguruslan railway train station. View from the near train window. Russia.JPG
+ | Fail = «Снег выпал».jpg
  | Pämez' = Vladimir Ber<br />(keväz'ku 2013—)
  | Telefonkod = +7-35352-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 (MSK+2)
 }}
-[[Fail:Orenburg oblast Buguruslan Mosque.jpg|thumb|left|250px|Lidnan islaman pühäpert' vn 2006 sügüz'kus.]]
 '''Buguruslan''' ({{lang-ru|Бугуруслан}}, {{lang-tt|Богырыслан}}) om [[Venäma]]n lidn da lidnümbrik [[Orenburgan agj]]an lodehes. Se om [[Buguruslanan rajon]]an administrativižeks keskuseks, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1748. Se sai makundan lidnan statusad vl 1781. Ühtennimine raudtestancii om olmas «Samar — Uf»-jonol vspäi 1888. Buguruslan šingotase [[kivivoi]]n da gazan samižen i ümbriradmižen edheotandoil vspäi 1936, mugažo sömtegimišton edheotandad ratas (lihakombinat, jauhkombinat).
+Eländpunktan aluz om pandud vl 1748. Se sai makundan lidnan statusad vl 1781. Ühtennimine raudtestancii om olmas «Samar — Uf»-jonol vspäi 1888.
+
+Buguruslan šingotase [[kivivoi]]n da [[londuseline gaz|gazan]] samižen i ümbriradmižen edheotandoil vspäi 1936, mugažo sömtegimišton edheotandad ratas (lihakombinat, jauhkombinat).
 
 == Geografijan andmused ==
 Lidn sijadase Sur' Kinel'-jogen ({{lang-ru|Большой Кинель}}, {{lang-tt|Олы Кенәле}}, [[Volg]]an hurapol'ne bassein) da sen huran Konduzl-ližajogen ({{lang-ru|Кондузла}}) kaikil randoil, Bugul'man da Belebein ülüden suvipautkil, 80 m ü.m.t. keskmäižel korktusel. Matkad [[Orenburg]]hasai om 270 km suvipäivnouzmha orhal vai 355 km avtotedme. Lähembaine lidn om [[Pohvistnevo]] (Samaran agj) 22 km päivlaskmha kaikil teil, järedad lidnad — [[Samar]] 165 km päivlaskmha avtotedme i [[Oktäbr'skii]] 135 km pohjoižpäivnouzmha avtol.
 
-Nell' pen't žilod da 2 raudtesarakod mülüdas lidnümbrikho Buguruslanan ližaks. Lidnümbrikon pind — 76,46 km².
+Nell' pen't žilod da kaks' raudtesarakod mülüdas lidnümbrikho Buguruslanan ližaks. Lidnümbrikon pind — 76,46 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 49 741 ristitud, lidnümbrikon — 50 226 ristitud. Ristitišt vajehtase 49..55 tuhad röunoiš vspäi 1970 (55 400 rist. vl 2000). Vl 2017 kaik 50 004 eläjad oli lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 49 741 ristitud, lidnümbrikon — 50 226 ristitud. Lidnan ristitišt vajehtihe 49..55 tuhad röunoiš vll 1970−2018 (55 400 rist. vl 2000). Vl 2017 kaik 50 004 eläjad oli lidnümbrikos.
 
 Rahvahad (enamba 1% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 67,1%, [[totarlaižed]] — 10,3%, [[mordvinalaižed]] — 10,0%, [[ukrainalaižed]] — 1,6%, [[saksalaižed]] — 1,3%, toižed rahvahad — 9,7%.
 
-Professionaližen opendusen aluzkundad: Buguruslanan kivivoin, medicinine, pedagogine kolledžad i civiližen aviacijan lendimškol (kolledž), maižanduztehnikum, mugažo Samaran tehnižen universitetan filial.
+Professionaližen opendusen aluzkundad: Buguruslanan kivivoin<ref>[http://boilk.ru/ Buguruslanan kivivoin kolledžan sait (''boilk.ru'').] {{ref-ru}}</ref>, medicinine, pedagogine kolledžad i civiližen aviacijan lendimškol<ref>[http://www.bluga.ru/ Buguruslanan civiližen aviacijan lendimškolan sait (''bluga.ru'').] {{ref-ru}}</ref> (kolledž, Piterin civiližen aviacijan universitetan filial), maižanduztehnikum, mugažo Samaran tehnižen universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятный знак в 1748 г. основан г. Бугуруслан.jpg|Lidnan alusenpanendan znam vl 2018
+Каменная часовня.jpg|Kivine časoun' (ortodoksine hristanuskond), vn 2018 nägu
+Orenburg oblast Buguruslan Mosque.jpg|Lidnan islaman pühäpert', nägu vn 2006 sügüz'kus
+Buguruslan teatr.jpg|Buguruslanan dramteatr N. Gogolän nimed (2015)
+Buguruslan railway train station. View from the near train window. Russia.JPG|Buguruslan-päraudtestancijan sauvuz vl 2009
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://bugadmin.orb.ru/ Municipaližen «Buguruslan-lidn»-ühtnikan tobmuden aluzkundoiden oficialine sait (''bugadmin.orb.ru'').] {{ref-ru}}
