/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -35,6 +35,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Mitte aig, mugoi i mez'.''
 * ''Mužik ei ole ak, lehm ei ole hebo.''
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
+* ''Necil mehel kündlid ed osta.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
 * ''Sanal voib mez' rikta.''
 * ''Sanaspäi — mez', sarvespäi — härg.''
