--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -44,6 +44,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Lämoipalod mustoil ed sambuta.''
 * ''Mel't-se ei möskekoi.''
 * ''Mez' nimel ei elä, a radol.''
+* ''Necil mehel kündlid ed osta.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
 * ''Sapkoiden omblii om kaiken sapkata, lačnik — lačuta, a venehnik — veneheta.''
 * ''Seibhid eile, ka aid vereb.''
