/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -37,6 +37,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
 * ''Necil mehel kündlid ed osta.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
+* ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
 * ''Sanal voib mez' rikta.''
 * ''Sanaspäi — mez', sarvespäi — härg.''
 * ''Söm mehen kandišeb.''
