--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -186,6 +186,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 * ''Meiden pertid sänke ei ridelkoi.''
 * ''Melev om pertine, a avadimen kadoti.''
 * ''Pert' tehmata ei tule.''
+* ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
 * ''Toižes kodiš i vet toižin kandištas.''
 </blockquote>
 
