--- a/Mez'.mw
+++ b/Mez'.mw
@@ -21,6 +21,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ei nimi mest pahenda, a mez' nimen.''
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
+* ''Hondod mest hüväl vaihel ed johtuta.''
 * ''Iče ole mužik, siloi anda toižile-ki arv.''
 * ''Kaikuččel mehel oma erazvuiččed meled.''
 * ''Kala ecib süvemban, a mez' paremban.''
