/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -14,6 +14,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Edel raud ratteb, konz mehen sana katteb.''
 * ''Ende mez' man möb, edel kut sanan söb.''
 * ''Ei sur' sana sud haugoi.''
+* ''Hondod mest hüväl vaihel ed johtuta.''
 * ''Kaiked tot akale ala sanu.''
 * ''Kurdhele kaks' kerdad ei sanugoi.''
 * ''Neičukaine rodiše, i paginaine zavodiše.''
