/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -33,6 +33,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
 * ''Pahal ristitul mugomad i paginad.''
 * ''Pen' da tark, sur' da šläbäk.''
+* ''Penemb om da hotkemb, a suremb — da hillemb.''
 * ''Ristit koleb, a živat kadob.''
 * ''Sogedale kulub, a kurdhele nägub.''
 * ''Uradoid ei semekoi, ei rahngoi, iče kazdas.''
