/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -32,8 +32,11 @@ Südäimižed:
 * ''Kelel päd ed söta.''
 * ''Lajind satatest ei tege, kuni pul pähä ei iške.''
 * ''Oliži nišk, a länged löudasoiš.''
+* ''Ougil päd ei kehta kandišta.''
 * ''Pit'k om kagl, a pä ülemba.''
+* ''Päd ei ole, ka jaugoiš toukud ala eci.''
 * ''Pän kibištab, perskele kebnemb om.''
+* ''Toižele pähä mel't ei sa antta.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
