--- a/Oug.mw
+++ b/Oug.mw
@@ -3,9 +3,10 @@
 
 Tobjimalaz, konz pagištas ougan polhe, ka lugedas ei käden üläpalad, no [[ristitun hibj|hibjan]] palad [[pä]]n da käden keskes. Anatomižešti kuctas sidä ougniveleheks.
 
-== Ougha sidotud vepsän muštatiž ==
+== Ougha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Kanz kadjoiš, a elo hardjoiš.''
+* ''Ougil päd ei kehta kandišta.''
 </blockquote>
 
 {{stub}}
