--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -16,6 +16,7 @@ Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), seb
 * ''Hambhan kibu da mel'heižen kibu oma ühtejiččed.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Mel'hižen mehenke i kuzen al om čoma.''
+* ''Rahvahale — paha, a ičeleiž armaz.''
 * ''Solatomad särpta da ei mel'hišt čukoida.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
