/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -22,6 +22,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Hondod mest hüväl vaihel ed johtuta.''
+* ''Hüvä mez' andab vähäižespäi, a hond ei anda äjaspäi-ki.''
 * ''Hüväd mest om mil muštelta.''
 * ''Iče ole mužik, siloi anda toižile-ki arv.''
 * ''Kaikuččel mehel oma erazvuiččed meled.''
@@ -42,6 +43,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
 * ''Sanal voib mez' rikta.''
 * ''Sanaspäi — mez', sarvespäi — härg.''
+* ''Sil'mäd — ku luzikad, a ei näge mužikad.''
 * ''Söm mehen kandišeb.''
 </blockquote>
 
