--- a/Ristit.mw
+++ b/Ristit.mw
@@ -26,6 +26,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Ei rad ristitud riko, a hol'.''
 * ''Gorä ei kävele puidme, a käveleb ristituidme.''
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
+* ''Hill' hotkan sabutab.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
