/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -27,9 +27,11 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Gorä ei kävele puidme, a käveleb ristituidme.''
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Hill' hotkan sabutab.''
+* ''Ičesaz kitänd nikuna ei kožu.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
+* ''Kenel om äi, ka tarbiž völ enamb.''
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
 * ''Pahal ristitul mugomad i paginad.''
