--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -33,6 +33,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kel ohjased kädes, se i ohjandab.''
+* ''Kenel om äi, ka tarbiž völ enamb.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
