/* Kül'bet'he sidodud vepsän muštatiž da ozoitez */ +

--- a/Kül'bet'.mw
+++ b/Kül'bet'.mw
@@ -35,10 +35,11 @@ Vepsän küliš kül'betin alusenkived pandas laptha läz [[jogi|jogen]] randad,
 * ''Kül'bet'kart'' — tautadud kart veden lämbitusen täht.
 * ''Kül'bet'kibu, kül'bet'pagan, kül'bet'viga'' — läzund kül'betin jäl'ghe.
 
-== Kül'bet'he sidodud vepsän muštatiž da ozoitez ==
-=== Muštatiž ===
+== Kül'bet'he sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Kül'bet' kebnendab melen (mel't).''
+* ''Kül'betihe läksi da vastan unohti.''
 </blockquote>
 
 === Ozoitez ===
