/* Änižhe sidodud vepsän muštatiž */ +

--- a/Änine.mw
+++ b/Änine.mw
@@ -9,9 +9,10 @@ Läz tuhad penid vezivaluid da 52 pit'kad joged (10 km pidemb) langetas järvhe,
 
 Kaik om 1650 sart Änižes, tobj pala sijadase järven pohjoižes, niiden ühthine pind om 224 km². [[Kiži]]-sar' mülüb sariden lughu, sil om 89 pušt arhitekturan muštpacast 15.-20. voz'sadoid (časounäd, pühäkodid, küläpertid, mellicad da aitod). Nece keraduz om pandud [[UNESCO|UNESCO:n]] mail'man jäl'gusen nimikirjuteshe. Änižen päivnouzmrandal om 1200 [[petroglif]]ad (4.-2. voz'tuhad edel meiden erad). 
 
-== Änižhe sidodud vepsän muštatiž ==
+== Änižhe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Mägelpäi palab päiv, Änižespäi vilu päiv.''
+* ''Änižen taga hebo koli, a sinai jo händ sus.''
 </blockquote>
 
 == Homaičendad ==
