--- a/Ristit.mw
+++ b/Ristit.mw
@@ -21,6 +21,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * sor'miden korväččed pölused
 
 == Ristithu sidodud vepsän muštatišed ==
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Ala usko nikelle, kuni iče ed näge.''
 * ''Ei rad ristitud riko, a hol'.''
