--- a/Mez'.mw
+++ b/Mez'.mw
@@ -12,6 +12,7 @@ Mehen alaigäčud oma [[prihaine]] i [[priha]]. Suguküpsnemine zavodiše 12..13
 Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromosomad oma hänen kariotipas, znamoitas niid X i Y. Sen erineden naižen organizm om kahtenke X-hromosomanke.
 
 == Meheze sidodud vepsän muštatišed ==
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak mužikatoi — kutnä haumeh aidatoi.''
