+ galerei, +him, aktualizacii

--- a/Buzuluk.mw
+++ b/Buzuluk.mw
@@ -1,20 +1,20 @@
 {{Eländpunkt
  | Nimi = Buzuluk<br />Бузулук
- | Lidnanznam = Buzuluk gerb.jpg
+ | Lidnanznam = Buzuluk COA (1998).gif
  | Flag = Flag of Buzuluk (Orenburg oblast).png
  | Lidnanznam text = Buzulukan lidnanznam
  | Flag text = Buzulukan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 86,316
- | Voz' = 2017
+ | Eläjiden lugu = 86,042
+ | Voz' = 2021
  | Pind = 54.42
  | Fail = Площадь Ленина - panoramio (24).jpg
- | Pämez' = Valerii Rogožkin<br />(2000−2010.<br />tal'vku 2013—)
+ | Pämez' = Vladimir Peskov<br />(kezaku 2021—)
  | Telefonkod = +7-35342-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 (MSK+2)
 }}
-'''Buzuluk''' ({{lang-ru|Бузулук}}) om [[Venäma]]n lidn da lidnümbrik [[Orenburgan agj]]an päivlaskmas. Se om [[Buzulukan rajon]]an administrativižeks keskuseks mugažo, ei mülü sihe.
+'''Buzuluk''' ({{lang-ru|Бузулу́к}}) om [[Venäma]]n lidn da lidnümbrik [[Orenburgan agj]]an päivlaskmas. Se om [[Buzulukan rajon]]an administrativižeks keskuseks mugažo, ei mülü sihe.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1736 kuti Venäman imperijan lidnuz baškiralaižiden amuižen lidnan jändusiden sijha. Se sai makundan lidnan statusad vl 1781. 1960-nziš vozišpäi Buzuluk šingotase agjan [[kivivoi]]n samižen keskuseks.
@@ -25,9 +25,27 @@ Lidn sijadase Samar-jogen hural randal da sen Buzuluk- i Domašk-ližajogiden ra
 Buzuluk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 82 904 ristitud. Kaikiš suremb ristitišt oli 89 263 ristitud vl 2009. Rahvahad (enamba 1% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 92,5%, [[totarlaižed]] — 1,9%, [[ukrainalaižed]] — 1,2%, [[mordvinalaižed]] — 1,1%, toižed rahvahad — 3,3%.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 82 904 ristitud. Kaikiš suremb ristitišt oli 89 263 eläjad vl 2009. Rahvahad (enamba 1% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 92,5%, [[totarlaižed]] — 1,9%, [[ukrainalaižed]] — 1,2%, [[mordvinalaižed]] — 1,1%, toižed rahvahad — 3,3%.
 
-Professionaližen opendusen aluzkundad: 6 kolledžad (tegimišton i transportan, finansine, sauvondan, pedagogine, medicinine, muzikaline), mecan i gidromelioracijan tehnikumad, mugažo Buzulukan gumanitariž-tehnologine institut — Orenburgan valdkundaližen universitetan filial.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalankodid oli olmas lidnas edel nevondkundaližen tobmuden vahvištust: Klüčegorskii Jumalanmaman Kazanin jumalaižen, Sündun Toižetamižen, Jumalanmaman Tihvinan jumalaižen.
+
+Professionaližen opendusen aluzkundad: kuz' kolledžad (tegimišton i transportan, finansine, sauvondan<ref>[http://bsk-bz.ru/ Buzulukan sauvondkolledžan sait (''bsk-bz.ru'').] {{ref-ru}}</ref>, pedagogine, medicinine, muzikaline), mecan i gidromelioracijan tehnikumad, mugažo Buzulukan gumanitariž-tehnologine institut<ref>[http://bgti.ru/ Buzulukan gumanitariž-tehnologižen institutan sait (''bgti.ru'').] {{ref-ru}}</ref> — Orenburgan valdkundaližen universitetan filial.
+
+Edeližed lidnümbrikon pämehed oma:
+* Valerii Rogožkin (2000−2010, tal'vku 2013 — tal'vku 2018);
+* Sergei Salmin (viluku 2019 — tal'vku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ул. Ленина - panoramio (19).jpg|Skver i vezičuhunduz Leninan irdal (2013)
+Savior Transfiguration monastery (Buzuluk) 16.jpg|Pühäpert' karoil muretud Sündun Toižetamižen jumalankodin sijas, vn 2015 nägu
+Buzuluk ONG.jpg|«Orenburgneft'»-kivivoiühtelmasen päfater vl 2007 («[[Rosneft']]»-kompanijan pala)
+ТРЦ «Север».jpg|«Sever»-torguimižbobuštuzkeskuz (2019)
+Паровоз - panoramio (6).jpg|Puruvedim-muštnik vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://бузулук.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''бузулук.рф'').] {{ref-ru}}
