--- a/Gai_(lidn).mw
+++ b/Gai_(lidn).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Gain lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 35,255
- | Voz' = 2017
+ | Eläjiden lugu = 33,564
+ | Voz' = 2021
  | Pind = 62.14
  | Fail = Тучи над Гаем.jpg
  | Pämez' = Oleg Papunin<br />(reduku 2015—)
@@ -14,24 +14,35 @@
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 (MSK+2)
 }}
-'''Gai''' ({{lang-ru|Гай}}, «puišt» vaugedvenäman kelespäi) om [[Venäma]]n lidn [[Orenburgan agj]]an päivnouzmas. Se om Gain lidnümbrikon (edel 2016 vot — rajonan) administrativine keskuz.
+'''Gai''' ({{lang-ru|Гай}}, «puišt» [[vaugedvenäman kel'|vaugedvenäman]] kelespäi) om [[Venäma]]n lidn [[Orenburgan agj]]an päivnouzmas. Se om Gain lidnümbrikon (edel 2016. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vn 1959 9. päiväl semendkud samha [[vas'k|vas'kkivendod]]. Kätihe lidnanvuiččeks žiloks vl 1965. Sai lidnan statusad vl 1979.
 
-Gai šingotase küllästamižtegimel i mujumetalloiden ümbriradmižen tegimel, mugažo pästtas kaivuzpäzutandmašiništod i lindferm om olmas.
+Gai šingotase küllästamižkombinatal<ref>[http://www.ggok.ru/ Gain küllästamižkombinatan sait (''ggok.ru'').] {{ref-ru}} {{ref-en}}</ref> i mujumetalloiden ümbriradmižen tegimel, mugažo pästtas kaivuzpäzutandmašiništod i lindferm om olmas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Uralmäged|Suviuralan]] pautkil, 380 m ü.m.t. keskmäižel korktusel. Matkad [[Orenburg]]hasai om 245 km päivlaskmha orhal. Lähembaižed lidnad oma [[Orsk]] 30 km suvhe raudtedme i [[Novotroick]] 30 km suvhe orhal.
 
-34 eländpunktad mülüdas lidnümbrikho Gain ližaks. Lidnümbrikon pind — 2 923,55 km².
+Kaik 34 eländpunktad mülüdas lidnümbrikho Gain ližaks. Lidnümbrikon pind — 2 923,55 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 301 ristitud, lidnümbrikon nell' videndest. Kaikiš suremb lidnan ristitišt oli 44 800 eläjad vl 1996. Ortodoksižen hristanuskondan ph. Johann Kronštadtlaižen päjumalanpert' i phh. Pedr- da Pauloi-apostoloiden jumalanpert' oma väges, islaman pühäpert' om sauvomas vspäi 2012.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 301 ristitud, lidnümbrikon nell' videndest. Kaikiš suremb lidnan ristitišt oli 44 800 eläjad vl 1996.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Johann Kronštadtlaižen päjumalanpert' i phh. Pedr- da Pauloi-apostoloiden jumalanpert' oma väges, [[islam]]an pühäpert' om sauvomas vspäi 2012.
 
 Rahvahad (enamba 1% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 81,8%, [[baškirаlaižed]] — 4,7%, [[ukrainalaižed]] — 4,1%, [[totarlaižed]] — 3,9%, [[kazahlaižed]] — 1,9%, toižed rahvahad — 3,6%.
 
 Orskan indistrialižen i medicinižen<ref>[http://gai.ormk56.ru/ Orskan medicinižen kolledžan Gain filialan sait (''gai.ormk56.ru'').]</ref> kolledžiden filialad oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Updated city Boulevard.jpg|Lidnan udištadud bul'var (2012)
+Industrial playground of underground mine(2).jpg|Tegimištol'ne lavut kaivuden ülähäs vl 2014
+Head Office GGOKa.jpg|Gain küllästamižkombinatan päfater vl 2016
+Rudopodgotovitel'nyj complex.jpg|Kivendon vaumičemižkompleks vl 2010<br />(Gain küllästamižkombinat)
+Palace of culture of miners.jpg|Kaivajiden kul'turkeskuz (2004)
+</gallery>
 
 == Homaičendad ==
 <references/>
