--- a/Dzeta.mw
+++ b/Dzeta.mw
@@ -1,4 +1,13 @@
-'''Dzeta''' ('''Ζ''', '''ζ''') om [[grekan kirjamišt]]on kudenz' kirjam.
+'''Dzeta''' vai '''Zita''' ('''Ζ''', '''ζ''', virkand {{lang-el|ζήτα}} [ˈzi.ta], {{lang-grc|ζῆτα}} ''dzeta'' vai ''zdeta'') om [[grekan kirjamišt]]on kudenz' kirjam.
+
+Kirjam libui finikijan ''zen''-kirjamespäi (𐤆), kändase «azeg». Latinan [[Z]]-kirjam i kirilline [[З]]-kirjam libudas grekan dzeta-kirjamespäi.
+
+== Kävutand znamaks ==
+Ottas kävutamižhe penid kirjamid päpaloin znamoičemha:
+* Rimanan dzetafunkcijad matematikas ;
+* dzetapotencialad kolloidižes himijas;
+* gidrovastustusen koefficientad gidravlikas;
+* korktusen anomalijad geodezijas (normaližen i [[geodezine korktuz|geodezižen]] korktusiden erižuz).
 
 {{Commons|Category:Zeta (letter)}}
 {{grekan kirjamišt}}
