--- a/Sonzared.mw
+++ b/Sonzared.mw
@@ -23,6 +23,11 @@ Gavediden [[metamorfoz]] om täuz'. Ned oma suugitomad sekundarižikš, suugad o
 
 Sonzared oma ristitun, linduiden i imetaiživatoiden varuližiden läžundoiden kandajad. Likvidacijan märad oma paks pezend, ümbriradmine insekticidal (paremba kaiked kodiživatan).
 
+== Sonzarehe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Hänel sonzar' kelel ei ištu.'' (kelekahan ristitun polhe)
+</blockquote>
+
 == Homaičendad ==
 <references />
 
