/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -33,6 +33,7 @@ Südäimižed:
 * ''Lajind satatest ei tege, kuni pul pähä ei iške.''
 * ''Oliži nišk, a länged löudasoiš.''
 * ''Ougil päd ei kehta kandišta.''
+* ''Pahad päd vinal ed ladi.''
 * ''Pit'k om kagl, a pä ülemba.''
 * ''Päd ei ole, ka jaugoiš toukud ala eci.''
 * ''Pän kibištab, perskele kebnemb om.''
