--- a/Alkogoližed_jomad.mw
+++ b/Alkogoližed_jomad.mw
@@ -10,6 +10,13 @@ Om regionaližid pirdoid alkogolin kävutandas: väghižed jomad Pohjoižmaiš, 
 
 Alkogoližiden jomiden kaikenaigaine ülämär om äjiden läžundoiden sü, ristitkundan problemoiden purde. Etilspirt om psihoaktivine substancii i kucub [[depressii|depressijoid]], voib veda fizižennoks rippundannoks.
 
+== Alkogoližihe jomihe sidodud vepsän muštatišed ==
+<blockquote>
+* ''Humalahne kuti nat'.''
+* ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
+* ''Pahad päd vinal ed ladi.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
