--- a/Mägr.mw
+++ b/Mägr.mw
@@ -24,6 +24,11 @@
 
 Täuz'kaznu hibj om 60..90 sm pitte, händan piduz — 20..24 sm, sügüzel sase 34 kilogrammhasai vedutte. Ižačud oma järedamb vähän mi emäčud. Karv om kauged. Lankteb unhe tal'veks.
 
+== Mägrha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Nece ristit om kuti must mägr.'' (käredanhimoičii)
+</blockquote>
+
 {{Commons|Meles meles}}
 
 {{stub}}
