/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -33,6 +33,9 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Kana eile lind, ak eile ristit.''
 * ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
 * ''Kenel om äi, ka tarbiž völ enamb.''
+* ''Kesknahkaspäi om vil'düd.'' (koverikaz ristit)
+* ''Käredan ristitun sormed om harotadud.''
+* ''Nece ristit om kuti must mägr.'' (käredanhimoičii)
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
 * ''Pahal ristitul mugomad i paginad.''
