--- a/Nahk.mw
+++ b/Nahk.mw
@@ -2,8 +2,9 @@
 [[Fail:Menschliche Haut.jpg|thumb|right|250px|Ristitun nahkan pind]]
 '''Nahk''' om [[sel'grodaižed|sel'grodaižiden]] organizman irdkatuz, kudamb kaičeb hibjad painusišpäi i ühtneb [[hengaiduz|hengaidushe]], [[termoreguläcii|termoreguläcijaha]], vajehtamižihe da äjihe toižihe processoihe. 
 
-== Nahkaha sidodud vepsän muštatiž ==
+== Nahkaha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Kesknahkaspäi om vil'düd.'' (koverikaz ristit)
 * ''Pahk — se-žo nahk, vaiše rusktembahk.''
 </blockquote>
 
