--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -109,6 +109,7 @@
 * ''Heimod om äi, söda ei kus.''
 * ''Hüvä vävu, da harvemba kävu.''
 * ''Hüväd susedad pahaze heimho ed vajehta.''
+* ''Ken kenenke eläb, se sen tedab-ki.''
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Meiden mind' linneb radon sijas.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
