--- a/Mel'nikov_Konstantin.mw
+++ b/Mel'nikov_Konstantin.mw
@@ -2,7 +2,9 @@
 | изображение = Melnikov.jpg
 | описание изображения = Konstantin Mel'nikov 1920-nzil vozil
 }}
-'''Konstantin Stepanovič Mel'nikov''' ({{lang-ru|Константин Степанович Мельников}}; sünd. 3. eloku 1890, [[Moskv]], [[Venäman imperii]] — kol. 28. kül'mku 1974, Moskv, [[Nevondkundaline Ühtištuz|NSTÜ]]) — venämalaine i nevondkundaline arhitektor-[[konstruktivizm|konstruktivist]].
+'''Konstantin Stepanovič Mel'nikov''' ({{lang-ru|Константин Степанович Мельников}}; sünd. 22. heinku (3. eloku) 1890, [[Moskv]], [[Venäman imperii]] — kol. 28. kül'mku 1974, Moskv, [[Nevondkundaline Ühtištuz|NSTÜ]]) — venämalaine i nevondkundaline arhitektor-[[konstruktivizm|konstruktivist]], pirdai da pedagog, Venäman NFST:n arvostadud arhitektor. Hän oli avangardan čuradusen lideroišpäi nevondkundaližes arhitekturas vll 1923−1933.
+
+Arhitektor sai mail'man tetabut 1930-nzil vozil, no niil-žo vozil Mel'nikovan sädamižkoncepcii oli alištunu teravale arvostelendale NSTÜ:s «formalizman» tagut. Mez' oli čuratud radmižespäi ičeze professijas, jäl'gmäine letud sauvuz hänen projektan mödhe datiruiše vodel 1936.
 
 == Homaičendad ==
 <references/>
