--- a/.bd.mw
+++ b/.bd.mw
@@ -1,4 +1,7 @@
+[[Fail:DotBd domain logo.png|thumb|right|250px|Domenan logotip]]
 '''.bd''' om [[Bangladeš]]an [[DNS|Internet-domen]]. Se om avaitud [[1999. voz'|1999]]-nden voden 20. päiväl semendkud.<ref>[http://iana.org/domains/root/db/bd.html IANA — .bd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+
+Registracii om lasktud koumandel tazopindal kahtenden tazopindan reglamentiruidud aladomenoil. Severz'-se aladomenad oma Bangladešan tobmuden organoiden täht vaiše.
 
 == Homaičendad ==
 <references />
@@ -6,6 +9,7 @@
 == Irdkosketused ==
 * [http://domainreg.btcl.com.bd/ Domenan sait (''domainreg.btcl.com.bd'')] {{ref-en}}, ohjandab «Bangladesh Telecommunications Company Ltd.»
 * [http://iana.org/domains/root/db/bd.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.bd}}
 
 {{CcTLD}}
 
