--- a/.bd.mw
+++ b/.bd.mw
@@ -1,7 +1,7 @@
 [[Fail:DotBd domain logo.png|thumb|right|250px|Domenan logotip]]
-'''.bd''' om [[Bangladeš]]an [[DNS|Internet-domen]]. Se om avaitud [[1999. voz'|1999]]-nden voden 20. päiväl semendkud.<ref>[http://iana.org/domains/root/db/bd.html IANA — .bd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.bd''' om [[Bangladeš]]an [[DNS|Internet-domen]]. Se om avaitud [[1999. voz'|1999]]-nden voden 20. päiväl semendkud<ref>[http://iana.org/domains/root/db/bd.html IANA — .bd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Sen komplimentarine domen om [[.বাংলা]] (''bangla'') domennimiden täht [[bengalan kel'|bengalan kelel]], om sädud vl 2011, registracii zavodihe vn 2016 tal'vkus.
 
-Registracii om lasktud koumandel tazopindal kahtenden tazopindan reglamentiruidud aladomenoil. Severz'-se aladomenad oma Bangladešan tobmuden organoiden täht vaiše.
+Registracii .bd-domenal om lasktud koumandel tazopindal kahtenden tazopindan reglamentiruidud aladomenoil. Severz'-se aladomenad oma Bangladešan tobmuden organoiden täht vaiše.
 
 == Homaičendad ==
 <references />
