--- a/.bd.mw
+++ b/.bd.mw
@@ -1,7 +1,19 @@
 [[Fail:DotBd domain logo.png|thumb|right|250px|Domenan logotip]]
-'''.bd''' om [[Bangladeš]]an [[DNS|Internet-domen]]. Se om avaitud [[1999. voz'|1999]]-nden voden 20. päiväl semendkud<ref>[http://iana.org/domains/root/db/bd.html IANA — .bd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Sen komplimentarine domen om [[.বাংলা]] (''bangla'') domennimiden täht [[bengalan kel'|bengalan kelel]], om sädud vl 2011, registracii zavodihe vn 2016 tal'vkus.
+'''.bd''' om [[Bangladeš]]an [[DNS|Internet-domen]]. Se om avaitud [[1999. voz'|1999]]-nden voden 20. päiväl semendkud<ref>[http://iana.org/domains/root/db/bd.html IANA — .bd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Sen komplimentarine domen om [[.বাংলা]] (''.bangla'') domennimiden täht [[bengalan kel'|bengalan kelel]], om sädud vl 2011, registracii zavodihe vn 2016 tal'vkus.
 
-Registracii .bd-domenal om lasktud koumandel tazopindal kahtenden tazopindan reglamentiruidud aladomenoil. Severz'-se aladomenad oma Bangladešan tobmuden organoiden täht vaiše.
+Registracii .bd-domenal om lasktud koumandel tazopindal kahtenden tazopindan reglamentiruidud aladomenoil. Severz'-se aladomenoid oma Bangladešan tobmuden organoiden täht vaiše.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.com.bd''', '''.co.bd''' — kommertižed edheotandad da kompanijad.
+* '''.org.bd''' — kommertižetomad organizacijad.
+* '''.info.bd''' — informacižed saitad, vaiše person voib sada registracijad.
+* '''.net.bd''' — vaiše Bangladešan Internet-provaiderad.
+* '''.edu.bd'''	— opendusen aluzkundad, vaiše Bangladešan institutad, kolledžad i universitetad.
+* '''.ac.bd''' — akademižed aluzkundad, vaiše Bangladešan institutad, üläopendusen školad i [[koučing]]an keskused.
+* '''.mil.bd''' — valdkundan sodaaluzkundad vaiše.
+* '''.gov.bd''' — valdkundaližed organad vaiše.
+* '''.tv.bd''' — radioänetoitand i televizii (organizacijad i personad).
+* '''.sw.bd''' — programholitusen kompanijad i personad, tehnižed institutad.
 
 == Homaičendad ==
 <references />
