*Empty MediaWiki Message*

--- a/.bd.mw
+++ b/.bd.mw
@@ -10,8 +10,8 @@ Kahtenden tazopindan reglamentiruidud domenad:
 * '''.net.bd''' — vaiše Bangladešan Internet-provaiderad.
 * '''.edu.bd'''	— opendusen aluzkundad, vaiše Bangladešan institutad, kolledžad i universitetad.
 * '''.ac.bd''' — akademižed aluzkundad, vaiše Bangladešan institutad, üläopendusen školad i [[koučing]]an keskused.
-* '''.mil.bd''' — valdkundan sodaaluzkundad vaiše.
-* '''.gov.bd''' — valdkundaližed organad vaiše.
+* '''.mil.bd''' — Bangladeš-valdkundan sodaaluzkundad vaiše.
+* '''.gov.bd''' — Bangladešan valdkundaližed organad vaiše.
 * '''.tv.bd''' — radioänetoitand i televizii (organizacijad i personad).
 * '''.sw.bd''' — programholitusen kompanijad i personad, tehnižed institutad.
 
