--- a/.bh.mw
+++ b/.bh.mw
@@ -1,11 +1,14 @@
 '''.bh''' om [[Bahrein]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 1. päiväl uhokud.<ref>[http://iana.org/domains/root/db/bh.html IANA — .bh Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registracii om lasktud koumandel tazopindal vaiše. Domennimen registracii tegese Bahreinan oficialižiden kompanijoiden täht (kommertižed kompanijad i kundaližed organizacijad, valdkundaližed aluzkundad), verazmaižiden kompanijoiden Bahreinan palakundoiden täht.
+
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.inet.com.bh/ Domenan sait (''inet.com.bh'')], vl 2014 ohjandai om «Telecommunications Regulatory Authority» ''(tra.org.bh, Telekommunikacijoiden reguliruindan ohjanduz)'' Manam-lidnas {{ref-en}} {{ref-ar}}
+* [http://www.inet.com.bh/ Domenan sait (''inet.com.bh'')], vl 2014 ohjandai om «Telecommunications Regulatory Authority» ''(tra.org.bh, Telekommunikacijoiden reguliruindan ohjanduz)'' [[Manam]]-lidnas {{ref-en}} {{ref-ar}}
 * [http://iana.org/domains/root/db/bh.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.bh}}
 
 {{CcTLD}}
 
