--- a/.bh.mw
+++ b/.bh.mw
@@ -1,6 +1,7 @@
+[[Fail:Telecommunications Regulatory Authority of Bahrain logo.png|thumb|right|250px|Registracijan ohjandajan logotip]]
 '''.bh''' om [[Bahrein]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 1. päiväl uhokud.<ref>[http://iana.org/domains/root/db/bh.html IANA — .bh Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Registracii om lasktud koumandel tazopindal vaiše. Domennimen registracii tegese Bahreinan oficialižiden kompanijoiden täht (kommertižed kompanijad i kundaližed organizacijad, valdkundaližed aluzkundad), verazmaižiden kompanijoiden Bahreinan palakundoiden täht.
+Registracii om lasktud kahtendel tazopindal oikti i koumandel tazopindal kahtenden tazopindan aladomenoil. Domennimen registracii tegese Bahreinan oficialižiden kompanijoiden täht (kommertižed kompanijad i kundaližed organizacijad, valdkundaližed aluzkundad), verazmaižiden kompanijoiden Bahreinan palakundoiden täht. Sen ližaks, pidab ozutada telefonan nomerad sidon maksmižen täht. Valdkundan üks'jäine registrator om [[Batelco]]-kompanii.
 
 == Homaičendad ==
 <references />
