--- a/.bh.mw
+++ b/.bh.mw
@@ -1,5 +1,5 @@
 [[Fail:Telecommunications Regulatory Authority of Bahrain logo.png|thumb|right|250px|Registracijan ohjandajan logotip]]
-'''.bh''' om [[Bahrein]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 1. päiväl uhokud.<ref>[http://iana.org/domains/root/db/bh.html IANA — .bh Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.bh''' om [[Bahrein]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 1. päiväl uhokud<ref>[http://iana.org/domains/root/db/bh.html IANA — .bh Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine [[.البحرين]]-domen om sadud [[araban kel'|arabankel'židen]] domennimiden täht vl 2019, ei ole registracijad siš tähäsai (2020).
 
 Registracii om lasktud kahtendel tazopindal oikti i koumandel tazopindal kahtenden tazopindan aladomenoil. Domennimen registracii tegese Bahreinan oficialižiden kompanijoiden täht (kommertižed kompanijad i kundaližed organizacijad, valdkundaližed aluzkundad), verazmaižiden kompanijoiden Bahreinan palakundoiden täht. Sen ližaks, pidab ozutada telefonan nomerad sidon maksmižen täht. Valdkundan üks'jäine registrator om [[Batelco]]-kompanii.
 
@@ -7,7 +7,7 @@ Registracii om lasktud kahtendel tazopindal oikti i koumandel tazopindal kahtend
 <references />
 
 == Irdkosketused ==
-* [http://www.inet.com.bh/ Domenan sait (''inet.com.bh'')], vl 2014 ohjandai om «Telecommunications Regulatory Authority» ''(tra.org.bh, Telekommunikacijoiden reguliruindan ohjanduz)'' [[Manam]]-lidnas {{ref-en}} {{ref-ar}}
+* [http://www.inet.com.bh/ Domenan sait (''inet.com.bh'')], vl 2014 ohjandai om «Telecommunications Regulatory Authority» ''(tra.org.bh, Telekommunikacijoiden reguliruindan ohjanduz)'' [[Manam]]-lidnas. {{ref-en}} {{ref-ar}}
 * [http://iana.org/domains/root/db/bh.html IANA-informacii (''iana.org'').] {{ref-en}}
 {{Commons|Category:.bh}}
 
