--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -104,7 +104,7 @@
 * [[Tütrindam]] — ižindaman akan vai emindaman mužikan tütär
 
 == Heimolaižihe sidodud vepsän muštatišed ==
-Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
 * ''Heimod om äi, söda ei kus.''
