--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -10,7 +10,7 @@ Armastuz om üks' fundamentaližiden i ühthižiden temoiden mail'man [[kul'tur]
 Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), sebranikoiden keskes («filija»), romantine armastuz («eros») i ičtazandmižen armastuz («agape»).
 
 == Armastushe sidodud vepsän muštatišed ==
-Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Armaz kuti hahk lambaz verhas läväs.''
 * ''Armhemb ičtaiž ei ole nikeda.''
