/* Pähä sidodud vepsän muštatišed */ +hom

--- a/Pä.mw
+++ b/Pä.mw
@@ -25,6 +25,7 @@ Südäimižed:
 * hibused modos — [[habinod]], [[bard (hibused)|bard]], [[bakid]], [[kulmad]], [[ripsud]], [[octukad]], [[pleš]]
 
 == Pähä sidodud vepsän muštatišed ==
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andaižin mel't pähä, da ičelain om vähä.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
