/* Ekonomikha sidodud vepsän muštatišed */

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -18,7 +18,7 @@ Ristituiden kulutuzmärad oma röunatomad, no varad oma röunatud täutamha kulu
 Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan šingotesen, metodologine, ideologine, kritine i teoretine.
 
 == Ekonomikha sidodud vepsän muštatišed ==
-Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andad käzil, a otad jaugoil.'' (tulese kävuda pördamha velgad)
 * ''Eci, kut leibäd ecid, siloi löudad.''
