--- a/Käzi.mw
+++ b/Käzi.mw
@@ -29,6 +29,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 
 == Kädehe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andad käzil, a otad jaugoil.'' (tulese kävuda pördamha velgad)
 * ''Ei niken sündu kirvez kädes.''
