--- a/Jumal.mw
+++ b/Jumal.mw
@@ -7,7 +7,7 @@
 Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 
 == Jumalha sidodud vepsän muštatišed ==
-Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Jumal ei käske edelpäi teta.''
@@ -39,6 +39,5 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 
 {{Commons|Category:God}}
 
-{{stub}}
 [[Kategorii:Jumal| ]]
 [[Kategorii:Religii]]
