--- a/Topi_Bamir.mw
+++ b/Topi_Bamir.mw
@@ -2,9 +2,11 @@
 | изображение = Bamir Topi.jpg
 | описание изображения = Bamir Topi vn 2006 vilukus
 }}
-'''Bamir Mirteza Topi''' ({{lang-sq|Bamir Myrteza Topi}}; sünd. [[24. sulaku]] [[1957]], [[Tiran (lidn)|Tiran]]<!-- It means "Tirana", he's not a tiran =) -->, [[Albanii]]) om ranu [[Albanii|Albanijan]] 5. prezidentan (24. heinku 2007 — 24. heinku 2012).
+'''Bamir Mirteza Topi''' ({{lang-sq|Bamir Myrteza Topi}}; sünd. [[24. sulaku]] [[1957]], [[Tiran (lidn)|Tiran]]<!-- It means "Tirana", he's not a tiran =) -->, [[Albanii]]) om [[Albanii|Albanijan]] politikanmez' da diplomat. Mez' om ranu Albanijan 5. prezidentan (24. heinku 2007 — 24. heinku 2012).
 
-Biolog-živatlekar' professijan mödhe. Topi oli Albanijan Demokratižen partijan varaezimehen, no läksi partijaspäi ičeze prezidentan strokun aigaks, tahtoi olda «toran päl». Ühtni parlamentha vspäi 1996, radoi maižandusen ministran vll 1996−1997. Valitihe prezidentaks nelländes naprindas politižen krizisan jäl'ghe.
+Biolog-živatlekar' professijan mödhe. Topi oli Albanijan Demokratižen partijan varaezimehen, no läksi partijaspäi ičeze prezidentan strokun aigaks, tahtoi olda «toran päl». Ühtni parlamentha vspäi 1996, radoi maižandusen ministran vll 1996−1997. Sai tetabut kut kompromissan löudai ohjandajan partijan i oppozicijan keskes. [[Kosovo]]n ripmatomuden polenpidai. Valitihe prezidentaks nelländes naprindas politižen krizisan jäl'ghe.
+
+Vl 2012 Topi oli uden oigedkonservativižen «Uz' demokratine hengind»-partijan alusenpanijoišpäi ({{lang-sq|Fryma e Re Demokratike}}), i radoi sen ezimehen prezidentan radnikusen jäl'ghe vn 2021 uhokuhusai.
 
 == Homaičendad ==
 <references/>
