*Empty MediaWiki Message*

--- a/Topi_Bamir.mw
+++ b/Topi_Bamir.mw
@@ -6,7 +6,7 @@
 
 Biolog-živatlekar' professijan mödhe. Topi oli Albanijan Demokratižen partijan varaezimehen, no läksi partijaspäi ičeze prezidentan strokun aigaks, tahtoi olda «toran päl». Ühtni parlamentha vspäi 1996, radoi maižandusen ministran vll 1996−1997. Sai tetabut kut kompromissan löudai ohjandajan partijan i oppozicijan keskes. [[Kosovo]]n ripmatomuden polenpidai. Valitihe prezidentaks nelländes naprindas politižen krizisan jäl'ghe.
 
-Vl 2012 Topi oli uden oigedkonservativižen «Uz' demokratine hengind»-partijan alusenpanijoišpäi ({{lang-sq|Fryma e Re Demokratike}}), i radoi sen ezimehen prezidentan radnikusen jäl'ghe vn 2021 uhokuhusai.
+Vl 2012 Topi oli uden oigedkonservativižen «Uz' demokratine hengaiduz»-partijan alusenpanijoišpäi ({{lang-sq|Fryma e Re Demokratike}}), i radoi sen ezimehen prezidentan radnikusen jäl'ghe vn 2021 uhokuhusai.
 
 == Homaičendad ==
 <references/>
