--- a/Angolan_kvanz.mw
+++ b/Angolan_kvanz.mw
@@ -1,8 +1,8 @@
 '''Angolan kvanz''' ({{lang-pt|Kwanza}}) om [[Angol]]an valdkundvalüt. Se om väges vspäi 1977, vajehti Angolan eskudod. Eli läbi koumes denominacijas (1990, 1995, 1999).
 
-1 kvanz = 100 sentimod (''céntimo''). Valütkod om ''AOA''. Simvolad: Kz, kz. Valütan regulätor om Angolan Nacionaline bank<ref>[http://bna.ao/ Angolan Nacionaližen bankan sait (''bna.ao'').] {{ref-pt}}</ref>.
+Valüt om nimitadud Angolan znamasižen [[Kvanz (jogi)|Kvanz]]-jogen mödhe. 1 kvanz = 100 sentimod (''céntimo''). Valütkod om ''AOA''. Simvolad: Kz, kz. Valütan regulätor om Angolan Nacionaline bank<ref>[http://bna.ao/ Angolan Nacionaližen bankan sait (''bna.ao'').] {{ref-pt}}</ref>.
 
-Giperinflacii jätktase valdkundas (sulaku 2020). Rahuded pörundas: 10 i 50 sentimod, 1, 5, 10, 20 kvanzad. Banknotad oma 1, 5, 10, 50, 100, 200, 500, 1000, 2000, 5000 kvanzad nominalanke. Edel 1999. vot lvejad oliba henoikš rahoikš. Paindas banknotoid [[Venäma]]n Goznak-fabrikal.
+Giperinflacii jätktase valdkundas (sulaku 2020). Rahuded pörundas: 10 i 50 sentimod, 1, 5, 10, 20 kvanzad. Banknotad oma 1, 5, 10, 50, 100, 200, 500, 1000, 2000, 5000 kvanzad nominalanke. Edel 1999. vot lvejad oliba henoikš rahoikš (Lvei om Kvanzan ližajogi). Paindas banknotoid [[Venäma]]n Goznak-fabrikal.
 
 Valütkurs om vajehtui (ujui). Rahoiden kuvad oma kel'tud päiči vižkümnevoččiš da sen amuižemb.
 
