--- a/Angolan_kvanz.mw
+++ b/Angolan_kvanz.mw
@@ -1,4 +1,4 @@
-'''Angolan kvanz''' ({{lang-pt|Kwanza}}) om [[Angol]]an valdkundvalüt. Se om väges vspäi 1977, vajehti Angolan eskudod. Eli läbi koumes denominacijas (1990, 1995, 1999).
+'''Angolan kvanz''' ({{lang-pt|Kwanza}}) om [[Angol]]an valdkundvalüt. Se om väges vspäi 1977, vajehti Angolan eskudod 1:1 rindatuses. Eli läbi röunatud vajehtuses vl 1990 (1:1 rindatusenke) i kahtes denominacijas (vl 1995 — 1:1000, vl 1999 — 1:1 mln).
 
 Valüt om nimitadud Angolan znamasižen [[Kvanz (jogi)|Kvanz]]-jogen mödhe. 1 kvanz = 100 sentimod (''céntimo''). Valütkod om ''AOA''. Simvolad: Kz, kz. Valütan regulätor om Angolan Nacionaline bank<ref>[http://bna.ao/ Angolan Nacionaližen bankan sait (''bna.ao'').] {{ref-pt}}</ref>.
 
