--- a/Dilan_Bob.mw
+++ b/Dilan_Bob.mw
@@ -3,7 +3,7 @@
 | изображение = Joan Baez Bob Dylan crop.jpg
 | описание изображения = Bob Dilan vn 1963 elokus, marš civiližihe oiktusihe näht [[Vašington (lidn)|Vašingtonas]]
 }}
-'''Bob Dilan''' ['dɪlən], todesine nimi om '''Robert Allen Cimmerman''' ({{lang-en|Robert Allen Zimmerman}}; sünd. [[24. semendku]] [[1941]], [[Dulut]], [[Minnesot]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om amerikalaine muzikankirjutai da pajatai Ukrainan i Litvanman [[evrejalaied|evrejiženke]] augotižlibundanke, edestab gitaral, mugažo kirjutai, pirdai.
+'''Bob Dilan''' ['dɪlən], todesine nimi om '''Robert Allen Cimmerman''' ({{lang-en|Robert Allen Zimmerman}}; sünd. [[24. semendku]] [[1941]], [[Dulut (Minnesot)|Dulut]], [[Minnesot]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om amerikalaine muzikankirjutai da pajatai Ukrainan i Litvanman [[evrejalaied|evrejiženke]] augotižlibundanke, edestab gitaral, mugažo kirjutai, pirdai.
 
 == Biografii ==
 Robert om sündnu Dulut-lidnha. Vl 1962 Bob pästi ičeze ezmäine studine «Bob Dylan»-al'bom. Vl 2016 sai [[Nobelän premii|Nobelän literaturišt premijad]].<ref>[http://www.nytimes.com/2016/10/14/arts/music/bob-dylan-nobel-prize-literature.html Bob Dylan Wins Nobel Prize, Redefining Boundaries of Literature (Bib Dilan sai Nobelän premijad, röunoid literaturas toižetaden) / ''14.10.2016. Nytimes.com''.] {{ref-en}}</ref>
