--- a/Miura_Haruma.mw
+++ b/Miura_Haruma.mw
@@ -2,14 +2,16 @@
 | изображение = 三浦春馬還原英語感言666 手機桌布是和“她”的合照 4s.jpg
 | описание изображения = Haruma Miura vn 2019 elokus
 }}
-'''Haruma Miura''' ({{lang-ja|三浦 春馬}}; sünd. [[5. sulaku]] [[1990]], [[Cučiura]], [[Ibaraki]], [[Japonii]] — kol. [[18. heinku]] [[2020]], [[Tokio]], Japonii) oli japonijalaiane akt'or da pajatai.
+'''Haruma Miura''' ({{lang-ja|三浦 春馬}}; sünd. [[5. sulaku]] [[1990]], [[Cučiura]], [[Ibaraki]], [[Japonii]] — kol. [[18. heinku]] [[2020]], [[Tokio]], Japonii) oli japonine akt'or da pajatai.
 
 == Biografii ==
-Haruma oli sündnu Cučiura-lidnha.
+Haruma Miura oli sündnu Cučiura-lidnha. Fil'mzihe händast televizijan täht ezmäižen kerdan lapsen völ, vl 1997. Sil aigalpäi akt'or vändi äiluguižid rolid TV-serialoiš da toižiš televizijan oigendusiš.
 
-Händast fil'mzihe televizijan täht ezmäižen kerdan lapsen völ, vl 1997. 
+Miura debütirui soližeks pajatajaks «Fight for Your Heart»-singlanke vl 2019. Kahtenz' i jäl'gmäine «Night Diver»-singl om pästtud vl 2020. Molembad platad saiba populärižust Japonijas.
 
-== Fil'mografii (serialoid da massižid scenoid lugemata) ==
+Akt'or koli edel aigad, lopi elod ičtazrikondal ičeze eländkodiš policijan ühthevendoiden mödhe.
+
+== Valitud fil'mografii ==
 * «''Armastusen taivaz''» (2007) — Hiroki «Hiro» Sakurai
 * «''Kron'ad 2''» (2008) — Tacuja Bito
 * «''Tokio Park''» (2011) — Kodzi Šida
