--- a/Talosto.mw
+++ b/Talosto.mw
@@ -1,4 +1,4 @@
-'''«Talosto»''' ({{lang-ru|Талосто}}, kätas [[suomen kel'|suomen kelespäi]] kuti «kodilezi») om [[Venäma|venämalaine]] kompanii, saubaline akcionerine sebr [[Piter]]in päfateranke. Kül'menzoittud söndtavaroiden da sömižpol'fabrikatoiden tegii, sen paloin tegeb [[jähine|jähižen]].
+'''«Talosto»''' ({{lang-ru|Талосто}}, kändase [[suomen kel'|suomen kelespäi]] kuti «kodilezi») om [[Venäma|venämalaine]] kompanii, saubaline akcionerine sebr [[Piter]]in päfateranke. Kül'menzoittud söndtavaroiden da sömižpol'fabrikatoiden tegii, sen paloin tegeb [[jähine|jähižen]].
 
 Kompanii zavodi radmižen [[Piter]]iš vspäi [[1992]] kuti edheotand suomen da venän investicijoidenke vedamha [[Ingman]]- da [[Valio]]-kompanijoiden produktoid verhiš maišpäi. Ezmäine tatanmaine tegim om avaitud vl 1995. Nügüd' om tegimid [[Piter]]iš, [[Leningradan agj|Leningradan]] ([[Volhov]]), [[Moskvan agj|Moskvan]] da [[Rostovan agj|Rostovan]] ([[Šahti]]) agjoiš.
 
