--- a/Livermorii.mw
+++ b/Livermorii.mw
@@ -3,9 +3,9 @@
 {{Himine element|116|Livermorii|Lv|(293)|Metall|2|8|18|32|32|18|6}}
 '''Livermorii''' (''Lv'' — ''livermorium'' latinan kelel) om 116nz' himine element [[Himižiden elementoiden periodine tablut|himižiden elementoiden periodižes tabludes]]. Sen sijaduz om kudendestoštkümnendes gruppas, tabluden seičemendes periodas.
 
-Ei ole livermorijad londuses. Se om transaktinoidine ratud element.
+Ei ole livermorijad londuses. Se om [[transaktinoidad|transaktinoidine]] ratud element.
 
-== Avaidusen istorii da nimi ==
+== Avaidusen istorii da nimituz ==
 [[Venälaine Federacii|Venämalaižiden]] tedomehiden grupp avaiži livermorijan [[Dubn]]as vl 2000. Vn 2016 28. päiväl kül'mkud [[Teoretižen da sättutoitud himijan rahvahidenkeskeine ühtištuz|IUPAC]] vahvišti elementan nimitusen E. Lourensan nimel nimitadud Livermoran rahvahaližen laboratorijan mödhe ([[Livermor (Kalifornii)|Livermor]]-lidn, AÜV), kudamb ühtni elementan avaiduses, sihesai kucuihe sidä ''Unungeksii''-nimeks (''Uuh'') da ''eka-[[polonii|polonijaks]]''.
 
 == Fizižed ičendad ==
