--- a/Sent_Džons.mw
+++ b/Sent_Džons.mw
@@ -14,11 +14,14 @@
  | Telefonkod = +1-268
  | Aigvö = [[UTC]]−4
 }}
-'''Sent Džons''' ({{lang-en|St. John's}}) om [[Antigua da Barbud|Antiguan da Barbudan]] pälidn da kaikiš suremb lidn.
+'''Sent Džons''' ({{lang-en|St. John's}}) om [[Antigua da Barbud|Antiguan da Barbudan]] pälidn i kaikiš suremb lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud anglijalaižil vl 1632. Šingotihe [[saharrogo]]n ümbriradmižel 18. voz'sadan keskespäi. Om ripmatoman valdkundan pälidnaks vn 1981 kül'mkuspäi. Vn 1995 Luis-torok mureni lidnan turistišt infrastrukturad.
+Eländpunktan aluz om pandud anglijalaižil vl 1632. Šingotihe [[saharrogo]]n ümbriradmižel 18. voz'sadan keskespäi. Lidn oli alištunu manrehkaidusile vll 1690 i 1843, eli läbi vn 1769 lämoipalos, vn 1847 torok mureni lidnad.
 
+Sent Džons om ripmatoman valdkundan pälidnaks vn 1981 kül'mkuspäi. Vn 1995 Luis-torok mureni lidnan turistišt infrastrukturad.
+
+== Geografijan andmused ==
 Lidn sijadase valdkundan suvižen [[Antigua]]-saren pohjoižes-lodehes. Meriport i letkesižed kül'bendrandad.
 
 == Eläjad ==
