--- a/Sent_Džons.mw
+++ b/Sent_Džons.mw
@@ -14,7 +14,7 @@
  | Telefonkod = +1-268
  | Aigvö = [[UTC]]−4
 }}
-'''Sent Džons''' ({{lang-en|St. John's}}) om [[Antigua da Barbud|Antiguan da Barbudan]] pälidn i kaikiš suremb lidn.
+'''Sent Džons''' ({{lang-en|St. John's}}) om [[Antigua da Barbud|Antiguan da Barbudan]] pälidn i kaikiš suremb lidn. Se om Sent Džon-tulendan administrativine keskuz mugažo.
 
 == Istorii ==
 Eländpunktan aluz om pandud anglijalaižil vl 1632. Šingotihe [[saharrogo]]n ümbriradmižel 18. voz'sadan keskespäi. Lidn oli alištunu manrehkaidusile vll 1690 i 1843, eli läbi vn 1769 lämoipalos, vn 1847 torok mureni lidnad.
@@ -27,7 +27,7 @@ Lidn sijadase valdkundan suvižen [[Antigua]]-saren pohjoižes-lodehes. Meriport
 == Eläjad ==
 Vn 2011 rahvahanlugemižen mödhe lidnan eläjiden lugu oli 22 193 ristitud, valdkundan nelländez. Rahvahidenkeskeine lendimport om saudud päivnouzmha lidnaspäi.
 
-Vest-Indijan universitetan fakul'tetad anttas üläopendust. Sent-Džonsan valdkundaline kolledž pästab tedajid menedžmentan sferas, tropižes maižanduses, vilugoitimiden i elektromašiništon ladijoid.
+Vest-Indijan universitetan fakul'tetad anttas üläopendust. Sent-Džonsan valdkundaline kolledž pästab tedajid menedžmentan sferas, tropižes maižanduses, vilugoitimiden i elektromašiništon ladijoid. Kaks' mediciništ školad ratas lidnas.
 
 == Homaičendad ==
 <references />
